<resources>
    <string name="app_name">MealPlanner</string>
    <string name="meal">Meal</string>
    <string name="planner">Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="emailplaceholder">Enter your email</string>
    <string name="password">Password</string>
    <string name="passwordplacholder">Enter your Password</string>
    <string name="donothave">Don\'t have an account?</string>
    <string name="have">Aready have an account?</string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="lg"><u>Login</u></string>
    <string name="signupwith">Sign Up With</string>
    <string name="loginwith">Login With</string>
    <string name="nsignup">Sign Up</string>
    <string name="name">Name</string>
    <string name="nameplaceholder">Enter Your Name</string>
    <string name="repassword">Repassword</string>
    <string name="categorieslist">Categories List</string>
    <string name="categorymeals">Category Meals</string>
    <string name="showdetails">Details</string>
    <string name="showlist">List</string>
    <string name="meals">Meals</string>
    <string name="categories">Category</string>
    <string name="area">Area</string>
    <string name="ingredientData">Ingredients</string>
    <string name="cancel_button_desc">Cancel</string>
    <string name="addtoplan">Add To Plan</string>
    <string name="choose">Choose Day</string>

    <string name="select_weekday">Select a weekday</string>
    <string name="bestsell">Best Sell</string>
    <string-array name="weekdays_array">
        <item>Choose a day</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="default_web_client_id">832997206538-pam1v7fqn9mu5t8989o5rlq75en621tj.apps.googleusercontent.com</string>
    <string name="guest">Guest</string>
    <string name="noNetwork">No Internet Connection</string>

</resources>

