<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.signup.view.SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/ssignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/rubik_bold"
            android:padding="10dp"
            android:text="@string/nsignup"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/semail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/rubik_medium"
            android:padding="10dp"
            android:text="@string/email"
            android:textColor="@color/dark_gray"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ssignup" />

        <EditText
            android:id="@+id/semailFeild"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/emailplaceholder"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/semail" />

        <TextView
            android:id="@+id/spassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/rubik_medium"
            android:padding="10dp"
            android:text="@string/password"
            android:textColor="@color/dark_gray"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/semailFeild" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:textColorHint="@color/gray"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/gray"
            app:expandedHintEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/passwordplacholder"
                android:inputType="textPassword"
                android:padding="10dp"

                android:textColor="@color/black"
                android:textSize="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/srepassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/rubik_medium"
            android:padding="10dp"
            android:text="@string/repassword"
            android:textColor="@color/dark_gray"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:textColorHint="@color/gray"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/gray"
            app:expandedHintEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/srepassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repasswordField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/passwordplacholder"
                android:inputType="textPassword"
                android:padding="10dp"

                android:textColor="@color/black"
                android:textSize="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ssginupBtn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/rubik_medium"
            android:padding="10dp"
            android:text="@string/nsignup"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <TextView
            android:id="@+id/have"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/rubik_light"
            android:padding="10dp"
            android:paddingEnd="0dp"
            android:text="@string/have"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.217"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ssginupBtn" />

        <TextView
            android:id="@+id/sloginBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="38dp"
            android:clickable="true"
            android:fontFamily="@font/rubik_medium"
            android:padding="10dp"
            android:text="@string/lg"
            android:textColor="@color/orange"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/have"
            app:layout_constraintTop_toBottomOf="@+id/ssginupBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>