<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.view.lgoin.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="130dp"
            android:fontFamily="monospace"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:fontFamily="monospace"
            android:padding="10dp"
            android:text="@string/email"
            android:textColor="@color/dark_gray"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/emailplaceholder"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:text="@string/password"
            android:textColor="@color/dark_gray"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailField" />

<!--        <EditText-->
<!--            android:id="@+id/passwordField"-->
<!--            android:layout_width="360dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:background="@drawable/edit_text_border"-->
<!--            android:ems="10"-->
<!--            android:hint="@string/passwordplacholder"-->
<!--            android:inputType="textPassword"-->
<!--            android:padding="10dp"-->
<!--            android:textSize="20sp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/password" />-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:hint="@string/passwordplacholder"
            android:textColorHint="@color/gray"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>