<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.search.view.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <AutoCompleteTextView
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_edit_text"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:hint="Search By Meal Name"
            android:padding="10dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchBar"
            app:layout_constraintWidth_default="wrap"
            app:singleSelection="true">


            <com.google.android.material.chip.Chip
                android:id="@+id/categories"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                app:chipEndPadding="10dp"
                app:chipStartPadding="10dp"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/area"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                app:chipEndPadding="10dp"
                app:chipStartPadding="10dp"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ingredientData"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredientData"
                app:chipEndPadding="10dp"
                app:chipStartPadding="10dp"
                app:chipStrokeWidth="1dp" />

        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_view"
            android:layout_width="381dp"
            android:layout_height="551dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/search_card"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>